--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -55,18 +55,14 @@
 # 哔哩哔哩 //app.bilibili.com, api.bilibili.com, api.vc.bilibili.com, manga.bilibili.com, api.biliapi.net, api.live.bilibili.com
 ## 屏蔽IP请求,屏蔽首页右上活动,屏蔽DefaultWord,屏蔽青少年弹窗提示 //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/(x\/(resource\/(ip|top\/activity)|v\d\/(search\/defaultwords|account\/teenagers\/timer\/get))|bilibili\.app\.interface\.v1\.Search\/Default) url reject-dict
-## Material_Ad //api.bilibili.com
-^https?:\/\/api\.bilibili\.com\/x\/vip\/ads\/material\/report url reject-dict
-## 小卡片广告 //api.bilibili.com
-^https?:\/\/api\.bilibili\.com\/pgc\/season\/player\/cards url reject-dict
+## Material_Ad,小卡片广告,可能的一些推广 //api.bilibili.com
+^https?:\/\/api\.bilibili\.com\/(x\/vip\/ads\/material\/report|pgc\/(season\/player\/cards|season\/app\/related\/recommend\?)) url reject-dict
 ## 去除搜索中的大家都在搜 //api.vc.bilibili.com
 ^https?:\/\/api\.vc\.bilibili\.com\/search_svr\/v\d\/Search\/recommend_words url reject-dict
 ## 去除动态中的话题 //api.vc.bilibili.com
 ^https?:\/\/api\.vc\.bilibili\.com\/topic_svr\/v1\/topic_svr url reject-dict
 # 去除动态中的最常访问 //api.vc.bilibili.com
 ^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/mix_uplist url reject-dict
-## 可能的一些推广(beta) //api.bilibili.com
-^https?:\/\/api\.bilibili\.com\/pgc\/season\/app\/related\/recommend\? url reject-dict
 ## 漫画去广告 //manga.bilibili.com
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/(Flash|ListFlash) url reject-dict
 ## 观影页面去广告 //api.bilibili.com, api.biliapi.net
