--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -53,8 +53,8 @@
 ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/wechat110.js
 
 # 哔哩哔哩 //app.bilibili.com, api.bilibili.com, api.vc.bilibili.com, manga.bilibili.com, api.biliapi.net, api.live.bilibili.com
-## 屏蔽IP请求,屏蔽首页右上活动,屏蔽DefaultWord,屏蔽青少年弹窗提示 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/(x\/(resource\/(ip|top\/activity)|v\d\/(search\/defaultwords|account\/teenagers\/timer\/get))|bilibili\.app\.interface\.v1\.Search\/Default) url reject-dict
+## 屏蔽IP请求,屏蔽首页右上活动,屏蔽DefaultWord,开屏广告去广告,屏蔽青少年弹窗提示 //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/(x\/(resource\/(ip|top\/activity)|v\d\/(search\/defaultwords|splash\/show|account\/teenagers\/timer\/get))|bilibili\.app\.interface\.v1\.Search\/Default) url reject-dict
 ## Material_Ad,小卡片广告,可能的一些推广 //api.bilibili.com
 ^https?:\/\/api\.bilibili\.com\/(x\/vip\/ads\/material\/report|pgc\/(season\/player\/cards|season\/app\/related\/recommend\?)) url reject-dict
 ## 去除搜索中的大家都在搜 //api.vc.bilibili.com
@@ -67,8 +67,6 @@
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/(Flash|ListFlash) url reject-dict
 ## 观影页面去广告 //api.bilibili.com, api.biliapi.net
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/cinema\/tab\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## 应用开屏去广告 //app.bilibili.com
-^https:\/\/app\.bilibili\.com\/x\/v2\/splash\/show url reject-dict
 ## 开屏广告预加载,推荐去广告,我的页面处理,解锁1080P高码率+4K画质(番剧和影视除外),热搜发现,标签页处理,去除统一设置的皮肤 //app.bilibili.com
 ^https:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/list|feed\/index|account\/(mine|myinfo\?)|search\/square)|resource\/show\/(tab|skin\?)) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 追番去广告 //api.bilibili.com, api.biliapi.net
