--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-22 09:04
+# 2022-07-22 10:20
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 屏蔽广告联盟：快手联盟,腾讯优量汇,穿山甲 //api-access.pangolin-sdk-toutiao.com, open.e.kuaishou.com, mi.gdt.qq.com
@@ -52,7 +52,7 @@
 ## 跳过微信中转页面，解除被封禁链接//weixin110.qq.com, security.wechat.com
 ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/wechat110.js
 
-# 哔哩哔哩 //app.bilibili.com, api.bilibili.com, api.vc.bilibili.com, manga.bilibili.com, api.biliapi.net, api.live.bilibili.com
+# 哔哩哔哩 //app.bilibili.com, api.bilibili.com, api.biliapi.net, api.live.bilibili.com, api.vc.bilibili.com, manga.bilibili.com
 ## 屏蔽IP请求,屏蔽首页右上活动,屏蔽DefaultWord,开屏广告去广告,屏蔽青少年弹窗提示 //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/(x\/(resource\/(ip|top\/activity)|v\d\/(search\/defaultwords|splash\/show|account\/teenagers\/timer\/get))|bilibili\.app\.interface\.v1\.Search\/Default) url reject-dict
 ## 开屏广告预加载,推荐去广告,我的页面处理,解锁1080P高码率+4K画质(番剧和影视除外),热搜发现,标签页处理,去除统一设置的皮肤 //app.bilibili.com
@@ -63,14 +63,14 @@
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/cinema\/tab\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 追番去广告 //api.bilibili.com, api.biliapi.net
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 直播去广告 //api.live.bilibili.com
+^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 去除搜索中的大家都在搜,去除动态中的话题,去除动态中的最常访问 //api.vc.bilibili.com
 ^https?:\/\/api\.vc\.bilibili\.com\/(search_svr\/v\d\/Search\/recommend_words|topic_svr\/v1\/topic_svr|dynamic_svr\/v1\/dynamic_svr\/mix_uplist) url reject-dict
 ## 动态去广告 //api.vc.bilibili.com
 ^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/dynamic_(history|new)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 漫画去广告 //manga.bilibili.com
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/(Flash|ListFlash) url reject-dict
-## 直播去广告 //api.live.bilibili.com
-^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 
 # 微博 //*.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com
 ## 去除开屏广告 //*.uve.weibo.com
@@ -94,4 +94,4 @@
 ## 屏蔽网页限制 //static.zhihu.com
 ^https://static\.zhihu\.com/[^/]+/(main|column)\.signflow\.[^.]+.js url reject-dict
 
-hostname = api-access.pangolin-sdk-toutiao.com, open.e.kuaishou.com, mi.gdt.qq.com, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, home.115.com, zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, api.vc.bilibili.com, manga.bilibili.com, api.biliapi.net, api.live.bilibili.com, *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, appcloud2.zhihu.com, www.zhihu.com, api.zhihu.com, static.zhihu.com
+hostname = api-access.pangolin-sdk-toutiao.com, open.e.kuaishou.com, mi.gdt.qq.com, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, home.115.com, zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, api.biliapi.net, api.live.bilibili.com, api.vc.bilibili.com, manga.bilibili.com, *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, appcloud2.zhihu.com, www.zhihu.com, api.zhihu.com, static.zhihu.com
