--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-22 10:35
+# 2022-07-22 10:41
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 屏蔽广告联盟：快手联盟,腾讯优量汇,穿山甲 //api-access.pangolin-sdk-toutiao.com, open.e.kuaishou.com, mi.gdt.qq.com
@@ -50,7 +50,7 @@
 ## 去除公众号广告 //mp.weixin.qq.com
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
 ## 跳过微信中转页面，解除被封禁链接//weixin110.qq.com, security.wechat.com
-^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/wechat110.js
+^https\:\/\/(weixin110\.qq|security\.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/wechat110.js
 
 # 哔哩哔哩 //app.bilibili.com, api.bilibili.com, api.biliapi.net, api.live.bilibili.com, api.vc.bilibili.com, manga.bilibili.com
 ## 屏蔽IP请求,屏蔽首页右上活动,屏蔽DefaultWord,开屏广告去广告,屏蔽青少年弹窗提示 //app.bilibili.com
