--- a/QuantumultX/Rewrite/ScriptsCrack.conf
+++ b/QuantumultX/Rewrite/ScriptsCrack.conf
@@ -113,7 +113,7 @@ hostname = mid.zineapi.com, buy.itunes.apple.com, api.revenuecat.com, api.mb3adm
 ^https:\/\/server\.yoyiapp\.com\/fimo-user\/apple\/certificate$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/FiMoCameraFVIPCrack.js
 
 # 37 NoMo Cam解锁订阅
-^https?:\/\/nomo\.dafork\.com\/api\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
+^https:\/\/nomo\.dafork\.com\/api\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
 
 
 
