--- a/quantumultX.conf
+++ b/quantumultX.conf
@@ -373,7 +373,7 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 
 # 酷我音乐SVIP (By yxiaocai)
 ^https?:\/\/.*\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js
-^https?:\/\/.*\.kuwo\.cn\/music\.pay\?uid\=\d+ url 302 http://musicpay.kuwo.cn/music.pay?uid=2
+^(https?:\/\/.*\.kuwo\.cn\/.+?)uid\=\d+ url 302 $1uid=6
 
 
 # 去广告
