--- a/QuantumultX/Rewrite/ScriptsCrack.conf
+++ b/QuantumultX/Rewrite/ScriptsCrack.conf
@@ -1,4 +1,4 @@
-hostname = mid.zineapi.com, buy.itunes.apple.com, api.revenuecat.com, api.mb3admin.com, api.neuralprisma.com, photos.adobe.io, api.flexibits.com, license.pdfexpert.com, bmall.camera360.com, ticktick.com, dida365.com, *.intsig.net, note.youdao.com, account.wps.cn, lchttpapi.xczim.com, dayone.*, www.40sishi.com, license.enpass.io, biz.caiyunapp.com, lapi.photomath.net, *.adobe.*, www.shencut.com, notability.com, restore-access.indream.app, appraven.net, www.evestudio.cn, flomoapp.com, cubox.pro, api-production.endel.io, subscription.grammarly.com, ios-api-2.duolingo.cn, spclient.wg.spotify.com, api-v3.speedtest.cn, api.tidal.com, *.*xima*.*, *.xmcdn.com, www.zhihu.com, link.zhihu.com, server.yoyiapp.com, nomo.dafork.com
+hostname = mid.zineapi.com, buy.itunes.apple.com, api.revenuecat.com, api.mb3admin.com, api.neuralprisma.com, photos.adobe.io, api.flexibits.com, license.pdfexpert.com, bmall.camera360.com, ticktick.com, dida365.com, *.intsig.net, note.youdao.com, account.wps.cn, lchttpapi.xczim.com, dayone.*, www.40sishi.com, license.enpass.io, biz.caiyunapp.com, lapi.photomath.net, *.adobe.*, www.shencut.com, notability.com, restore-access.indream.app, appraven.net, www.evestudio.cn, flomoapp.com, cubox.pro, api-production.endel.io, subscription.grammarly.com, ios-api-2.duolingo.cn, spclient.wg.spotify.com, api-v3.speedtest.cn, api.tidal.com, *.*xima*.*, *.xmcdn.com, www.zhihu.com, link.zhihu.com, server.yoyiapp.com, nomo.dafork.com, vira.llsapp.com
 
 
 # 01 Varlens 解锁PRO(by iOS黑科技)
@@ -114,6 +114,10 @@ hostname = mid.zineapi.com, buy.itunes.apple.com, api.revenuecat.com, api.mb3adm
 
 # 37 NoMo Cam解锁订阅
 ^https:\/\/nomo\.dafork\.com\/api\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
+
+# 38 流利说 阅读会员、解锁阅读权限、解锁音频权限等
+^https:\/\/vira\.llsapp\.com\/api\/v\d\/\w+\/\w+$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/LiuLiShuoYueDu/Script/LiuLiShuoYueDu.js
+
 
 
 
