--- a/QuantumultX/Rewrite/planny6.conf
+++ b/QuantumultX/Rewrite/planny6.conf
@@ -8,8 +8,8 @@
  
 [rewrite_local]
 # ～ Planny 6 解鎖會員權限
-^https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-body https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
+^https:\/\/api\.revenuecat\.com\/v\d\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
+^https:\/\/api\.revenuecat\.com\/v\d\/receipts$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
 
-
-[mitm] 
+[mitm]
 hostname= api.revenuecat.com
