--- a/QuantumultX/Rewrite/planny6.conf
+++ b/QuantumultX/Rewrite/planny6.conf
@@ -8,7 +8,7 @@
  
 [rewrite_local]
 # ～ Planny 6 解鎖會員權限
-^https:\/\/api\.revenuecat\.com\/v\d\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
+https://api.revenuecat.com/v1/subscribers/$RCAnonymousID%3A7d194fd555aa4d399b98609fa633de22$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
 ^https:\/\/api\.revenuecat\.com\/v\d\/receipts$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
 
 [mitm]
