--- a/QuantumultX/Rewrite/planny6.conf
+++ b/QuantumultX/Rewrite/planny6.conf
@@ -8,11 +8,9 @@
  
 [rewrite_local]
 # ～ Planny 6 解鎖會員權限
-#^https:\/\/api\.revenuecat\.com\/v1\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
-#^https:\/\/api\.revenuecat\.com\/v1\/receipts$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
+^https:\/\/api\.revenuecat\.com\/v1\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
+^https:\/\/api\.revenuecat\.com\/v1\/receipts$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
 
-^https:\/\/api\.revenuecat\.com\/v1\/subscribers\/$RCAnonymousID%3Af898b8f187914c4090c9e0c0b7ed60c8$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
-^https:\/\/api\.revenuecat\.com\/v1\/subscribers\/$RCAnonymousID%3Af898b8f187914c4090c9e0c0b7ed60c8\/offerings$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/planny6.js
 
 [mitm]
 hostname= api.revenuecat.com
