--- a/QuantumultX/Rewrite/ScriptsCrack.conf
+++ b/QuantumultX/Rewrite/ScriptsCrack.conf
@@ -5,11 +5,8 @@ hostname = mid.zineapi.com, buy.itunes.apple.com, api.revenuecat.com, api.mb3adm
 ^https:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/YAOJIO/AutoSync/Youthsongs-QuantumultX/s7aa.cn/Varlens.js
 
 # 02 通用订阅解锁（by 公众号 iOS黑科技 与2021.6版本冲突 内部解锁Planny）⭐️
-#^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body http://ox.xmkczs.com/quantumultX/sub.js
-#^https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-body http://ox.xmkczs.com/quantumultX/subs.js
-
-^https:\/\/api\.revenuecat\.com\/v1\/subscribers\/735305D7-A927-41FD-AAC5-ECE734590569$ url script-response-body http://ox.xmkczs.com/quantumultX/sub.js
-^https:\/\/api\.revenuecat\.com\/v1\/subscribers\/735305D7-A927-41FD-AAC5-ECE734590569\/products$ url script-response-body http://ox.xmkczs.com/quantumultX/sub.js
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body http://ox.xmkczs.com/quantumultX/sub.js
+^https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-body http://ox.xmkczs.com/quantumultX/subs.js
 
 # 03 Emby 流媒体解锁订阅（20200913）Attention: 配合普拉斯影业提供的账号可进行观影：域名: https://movie.xeton.dev 端口: 443 账号：普拉斯影业 密码：plusisbest
 ^https:\/\/mb3admin\.com\/admin\/service(\/registration\/validateDevice|\/appstore\/register|\/registration\/validate|\/registration\/getStatus|\/supporter\/retrievekey) url script-echo-response https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/emby.js
@@ -39,11 +36,8 @@ hostname = mid.zineapi.com, buy.itunes.apple.com, api.revenuecat.com, api.mb3adm
 ^https://note.youdao.com/yws/(mapi/payment|api/self) url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ydybj.js
 
 # 12 filebox unlock pro
-#^https:\/\/api\.revenuecat\.com\/v\d\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/fileball.js
-#^https:\/\/api\.revenuecat\.com\/v\d\/receipts$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/fileball.js
-
-^https:\/\/api\.revenuecat\.com\/v1\/subscribers\/$RCAnonymousID%3A202c191110484c8a9324aa92e2e8a933$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/fileball.js
-^https:\/\/api\.revenuecat\.com\/v1\/subscribers\/$RCAnonymousID%3A202c191110484c8a9324aa92e2e8a933\/offerings$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/fileball.js
+^https:\/\/api\.revenuecat\.com\/v\d\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/fileball.js
+^https:\/\/api\.revenuecat\.com\/v\d\/receipts$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/fileball.js
 
 # 13 WPS (By eHpo)⭐️
 ^https://account.wps.cn/api/users/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js
