--- a/QuantumultX/Rewrite/ScriptsCrack.conf
+++ b/QuantumultX/Rewrite/ScriptsCrack.conf
@@ -4,7 +4,7 @@ hostname = mid.zineapi.com, buy.itunes.apple.com, api.revenuecat.com, api.mb3adm
 # 01 Varlens 解锁PRO(by iOS黑科技)
 ^https:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/YAOJIO/AutoSync/Youthsongs-QuantumultX/s7aa.cn/Varlens.js
 
-# 02 通用订阅解锁（by 公众号 iOS黑科技 与2021.6版本冲突 内部解锁Planny）⭐️
+# 02 通用订阅解锁（by 公众号 iOS黑科技 与2021.6版本冲突 内部解锁Planny）
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body http://ox.xmkczs.com/quantumultX/sub.js
 ^https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-body http://ox.xmkczs.com/quantumultX/subs.js
 
@@ -35,7 +35,7 @@ hostname = mid.zineapi.com, buy.itunes.apple.com, api.revenuecat.com, api.mb3adm
 # 11 有道云笔记VIP (ByAlex0510)⭐️
 ^https://note.youdao.com/yws/(mapi/payment|api/self) url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ydybj.js
 
-# 12 filebox unlock pro
+# 12 filebox unlock pro ⭐️⭐️⭐️⭐️⭐️ 与 Planny 6 冲突，暂时注销
 #^https:\/\/api\.revenuecat\.com\/v\d\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/fileball.js
 #^https:\/\/api\.revenuecat\.com\/v\d\/receipts$ url script-echo-response https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Scripts/fileball.js
 
